<resources>
    <string name="app_name">Lockdown Check</string>
    <string name="category">type</string>
    <string name="deleted">deleted</string>
    <string name="date_changed">date changed</string>
    <string name="detail_description_input">description</string>
    <string name="detail_save_task">Back to List</string>
    <string name="done">done</string>
    <string name="Prio">priority</string>
    <string name="highPrioText">high priority for task</string>
    <string name="highPrioText_short">high priority</string>
    <string name="normalPrioText">normal priority for task</string>
    <string name="normalPrioText_short">normal priority</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="placeholder_amount">sum</string>
    <string name="placeholder_cancel">Cancel</string>
    <string name="placeholder_costs">costs</string>
    <string name="placeholder_costs_significant_detail">Dollar</string>
    <string name="placeholder_costs_decimal_detail">Cent</string>
    <string name="placeholder_date_long">deadline</string>
    <string name="placeholder_date">target</string>
    <string name="placeholder_date_detail">date</string>
    <string name="placeholder_date_export">add to calendar</string>
    <string name="placeholder_date_input">date (time)</string>
    <string name="placeholder_date_removal">When do you want to move?</string>
    <string name="placeholder_date_lockdown">When do you expect the lockdown to begin?</string>
    <string name="placeholder_description">notes</string>
    <string name="placeholder_detail_amount">amount</string>
    <string name="placeholder_edit_task">Edit Task</string>
    <string name="placeholder_export_no_date">Please choose a date first before export.</string>
    <string name="placeholder_init">Set up a NEW check list</string>
    <string name="placeholder_init_delete_old_tasks">delete all existing tasks!</string>
    <string name="placeholder_init_no_date">No date specified - Standard tasks are created without date.</string>
    <string name="placeholder_link">link</string>
    <string name="placeholder_link_input">url or ressource</string>
    <string name="placeholder_links">links</string>
    <string name="placeholder_name">Task Name</string>
    <string name="placeholder_overview">overview</string>
    <string name="placeholder_save">Save</string>
    <string name="placeholder_settings">Settings</string>
    <string name="placeholder_time_detail">time</string>
    <string name="placeholder_type">category</string>
    <string name="removed">removed</string>
    <string name="sortMode" translatable="false">sortMode</string>
    <string name="sortbyCosts">Sort By Costs</string>
    <string name="sortbydate">Sort By Date</string>
    <string name="sortbyIsDone">Sort By Done</string>
    <string name="sortbyName">Sort By Name</string>
    <string name="sortbyPriority">Sort By Priority</string>
    <string name="sortbyType">Sort By Type</string>
    <string name="time_changed">time changed</string>
    <string name="todo">todo</string>
    <string name="undo">undo</string>
    <string name="paid_done">paid</string>
    <string name="currency">€</string>
    <string name="currency_long">Euro</string>
    <string-array name="base_task_types">
        
        <item>FOODS</item>
        <item>MEDICINE</item>
        <item>HOUSEHOLD</item>
        <item>ELECTRONICS</item>
        <item>OTHER</item>
    </string-array>
    <string name="contractCancel">If you want to cancel your old contract, your move often offers a special right of termination if you cannot be supplied by your previous provider at your new place of residence. Take Care! Send evidences by registered mail if possible. You could otherwise take disadvantage of some providers.</string>
    <string name="partner_verivox_Id">2812</string>
    <string name="partner_check24_Id">133701</string>
    <string name="Rate_App">Rate App</string>
    <string name="textRate">An app that is not rated will not be purchased.\nAn app not purchased will not be supported and discontinued.\n\nPlease take 10 seconds to review. Thanks a lot!</string>
    <string name="Remind_me_later">Remind me later</string>
    <string name="No_thanks">No, thanks</string>
    <string name="back">back</string>
    <string name="placeholder_hide_done">Hide Done</string>
    <string name="placeholder_hide_low_prio">Hide Low Prio</string>
    <string name="Amazon">Amazon</string>
    <string name="Ebay">Ebay</string>
    <string name="amazon_generic_link_electronics"><![CDATA[https://www.amazon.com/gp/search/ref=as_li_qf_sp_sr_tl?ie=UTF8&tag=w1fxeor9us-20&index=aps&camp=1789&creative=9325&linkCode=as2&linkId=9f8d7c6b199d576a997b5082a92c3329&keywords=]]></string>
    <string name="amazon_generic_link_kitchen"><![CDATA[https://www.amazon.com/gp/search/ref=as_li_qf_sp_sr_tl?ie=UTF8&tag=w1fxeor9us-20&index=aps&camp=1789&creative=9325&linkCode=as2&linkId=28b8e86dd57df6299066d4bb991e9374&keywords=]]></string>
    <string name="taskRentalContractOld3Months">Ending your tenancy?</string>
    <string name="taskRentalContractOld">Cancel old lease</string>
    <string name="taskRentalContractOldDesc">Cancel your old tenancy on time. You may be able to shorten the notice period with a new tenant.</string>
    <string name="taskRentalContractOld3MonthsLINK">https://www.apartmentlist.com/renter-life/break-a-lease-without-a-penalty</string>
    <string name="rentalContractOldSpecialRightOfTermination">Break clauses</string>
    <string name="rentalContractOldSpecialRightOfTerminationLINK">https://www.ludlowthompson.com/property_advice/What_is_a_break_clause-25</string>
    <string name="rentalContractNew">New lease</string>
    <string name="rentalContractNewDesc">Check your rental contract for legal compliance and binding clauses (minimum rental period, reasonable advance payment for operating costs, excessive season rent, report visible defects, minor repair clause, flat share rent, brokerage commission, comparison of rent index / rental cover)</string>
    <string name="rentalContractNewTraps">Common traps</string>
    <string name="rentalContractNewTrapsLink">https://www.zillow.com/blog/5-common-moving-mistakes-183186/</string>
    <string name="rentalContractNewTips">Tips for the rental contract</string>
    <string name="rentalContractNewTipsLINK">https://www.kiplinger.com/article/real-estate/T050-C006-S001-seven-sins-of-first-time-renters.html</string>
    <string name="informOldAndNewNeighbours">Inform neighbors (old and new)</string>
    <string name="informOldAndNewNeighboursDesc">Let your old and new neighbors know about your move on the notice board.  Also note the rest times.  Usually from 1 p.m. to 3 p.m. and 8 p.m. to 7 a.m.  Also take the opportunity to attach your door signs so that the post and shipping companies can reach you.</string>
    <string name="informOldAndNewNeighboursDoorSigns">Choose door signs</string>
    <string name="informOldAndNewNeighboursDoorSignsLINK"><![CDATA[https://www.amazon.com/gp/search/ref=as_li_qf_sp_sr_tl?ie=UTF8&tag=w1fxeor9us-20&keywords=House signs with names&index=aps&camp=1789&creative=9325&linkCode=as2&linkId=6dc128bb3c84075b37e568177a8c611d]]></string>
    <string name="informAuthorities">Authorities</string>
    <string name="informAuthoritiesDesc">When you move out of state, you’ll have to transfer your driver’s license and update your vehicle’s registration and insurance within quite a short time frame (10 to 30 days, depending on your new state). A number of government agencies should be notified when you’re moving to another state. Be sure to update your address with the local office of the Social Security Administration, the electoral register, and other relevant institutions. The Internal Revenue Service will need your actual home address to mail your tax return, fiscal notes, and other documents. All you need to do is print out and mail in the IRS’ Change of Address form soon after your relocation.</string>
    <string name="informAuthoritiesResidence">IRS</string>
    <string name="informAuthoritiesResidenceLINK">https://www.irs.gov/faqs/irs-procedures/address-changes</string>
    <string name="informAuthoritiesCar">Driver License or ID Card (Texas)</string>
    <string name="informAuthoritiesCarLINK">https://www.dps.texas.gov/driverlicense/changes.htm</string>
    <string name="postalAftermath">Forwarding order</string>
    <string name="postalAftermathDesc">If you\'re moving home or moving your business, redirect your mail at the Post Office.</string>
    <string name="postalAftermathSetup">Mail Redirection</string>
    <string name="informContractors">Inform contractual partners</string>
    <string name="informContractorsDesc">Inform banks, insurance companies, mobile operators, employers and other contractual partners about your new address. Don\'t just rely on Your forwarding order</string>
    <string name="energyContract">Supplier of gas and power</string>
    <string name="energyContractDesc">Check whether you keep your old gas or electricity contract (but inform about a change of address) or if you are allowed to.</string>
    <string name="internetContract">Internet contract</string>
    <string name="internetContractDesc">Check whether you have to / may change your provider. Otherwise this must at least be informed.</string>
    <string name="internetContractAvailability">Providers at your new place of residence?</string>
    <string name="internetContractAvailabilityLINK"><![CDATA[https://broadbandnow.com/All-Providers]]></string>
    <string name="phoneContract">Landline phone</string>
    <string name="phoneContractDesc">Check whether you have to / may change your provider and whether you can take your old number with you.</string>
    <string name="phoneContractCompare">Compare telephone providers</string>
    <string name="phoneContractCompareLINK">https://www.verivox.de</string>
    <string name="tvContract">television contract</string>
    <string name="tvContractDesc">Check whether you have to / may change your provider. Otherwise this must at least be informed.</string>
    <string name="tvContractCompare">Compare TV providers</string>
    <string name="tvContractCompareLINK">https://www.verivox.de</string>
    <string name="fireAndBurglaryProtection">Fire protection and burglary protection</string>
    <string name="fireAndBurglaryProtectionDesc">Smoke detectors are compulsory in some federal states and can save lives. Don\'t forget the burglary protection.</string>
    <string name="fireAndBurglaryProtectionSmokeDetector">View smoke detector</string>
    <string name="fireAndBurglaryProtectionSmokeDetectorLINK"><![CDATA[https://www.amazon.com/gp/search/ref=as_li_qf_sp_sr_tl?ie=UTF8&tag=w1fxeor9us-20&keywords=fire detector&index=aps&camp=1789&creative=9325&linkCode=as2&linkId=6df846089c2d19d7984a9f764facfcbf]]></string>
    <string name="fireAndBurglaryProtectionBurglary">Burglary protection systems</string>
    <string name="fireAndBurglaryProtectionBurglaryLINKI"><![CDATA[https://www.amazon.com/gp/search/ref=as_li_qf_sp_sr_tl?ie=UTF8&tag=w1fxeor9us-20&keywords=security technology house&index=aps&camp=1789&creative=9325&linkCode=as2&linkId=a1885bd3cf763fd662899c98416d5d12]]></string>
    <string name="requestSpecialLeave">Apply for special leave</string>
    <string name="requestSpecialLeaveDesc">Possibly your employer will grant you special leave for the move. Questions don\'t cost anything!</string>
    <string name="introExampleRelation">0/25</string>
    <string name="legendCostsLong">Costs summary</string>
    <string name="legendOverview">done/all tasks</string>
    <string name="legendFilter">Filter by name</string>
    <string name="legendDone">Set task done</string>
    <string name="legendPrio">Set priority</string>
    <string name="legendExport">Calendar export</string>
    <string name="show_location">Show on map</string>
</resources>