<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sortByIsDone"
        android:orderInCategory="1"
        android:title="@string/sortbyIsDone"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortByName"
        android:orderInCategory="2"
        android:title="@string/sortbyName"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortByDate"
        android:orderInCategory="3"
        android:title="@string/sortbydate"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortByCosts"
        android:orderInCategory="4"
        android:title="@string/sortbyCosts"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortByPriority"
        android:orderInCategory="5"
        android:title="@string/sortbyPriority"
        app:showAsAction="never" />

    <item
        android:id="@+id/sortByType"
        android:orderInCategory="6"
        android:title="@string/sortbyType"
        app:showAsAction="never" />

</menu>